--- a/QuanLyCuaHang/QuanLyCuaHang.csproj
+++ b/QuanLyCuaHang/QuanLyCuaHang.csproj
@@ -100,6 +100,36 @@
   <ItemGroup>
     <Compile Include="Class.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="QuanLiBaocaodoanhThu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLiBaocaodoanhThu.Designer.cs">
+      <DependentUpon>QuanLiBaocaodoanhThu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLiSanPham.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLiSanPham.Designer.cs">
+      <DependentUpon>QuanLiSanPham.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLiThanhToan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLiThanhToan.Designer.cs">
+      <DependentUpon>QuanLiThanhToan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLiPhanHoi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLiPhanHoi.Designer.cs">
+      <DependentUpon>QuanLiPhanHoi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="QuanLiDonHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanLiDonHang.Designer.cs">
+      <DependentUpon>QuanLiDonHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDangKy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,47 +150,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuanLiDonHang.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="QuanLiDonHang.Designer.cs">
-      <DependentUpon>QuanLiDonHang.cs</DependentUpon>
-    </Compile>
     <Compile Include="QuanLiNguoiDung.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="QuanLiNguoiDung.Designer.cs">
       <DependentUpon>QuanLiNguoiDung.cs</DependentUpon>
     </Compile>
-    <Compile Include="QuanLiSanPham.cs">
-      <SubType>UserControl</SubType>
+    <Compile Include="QuanLiVanCHuyen.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="QuanLiSanPham.Designer.cs">
-      <DependentUpon>QuanLiSanPham.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLiThanhToan.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="QuanLiThanhToan.Designer.cs">
-      <DependentUpon>QuanLiThanhToan.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLiBaoCaoDoanhThu.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="QuanLiBaoCaoDoanhThu.Designer.cs">
-      <DependentUpon>QuanLiBaoCaoDoanhThu.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLiPhanHoi.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="QuanLiPhanHoi.Designer.cs">
-      <DependentUpon>QuanLiPhanHoi.cs</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLiVanChuyen.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="QuanLiVanChuyen.Designer.cs">
-      <DependentUpon>QuanLiVanChuyen.cs</DependentUpon>
+    <Compile Include="QuanLiVanCHuyen.Designer.cs">
+      <DependentUpon>QuanLiVanCHuyen.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="FormDangKy.resx">
       <DependentUpon>FormDangKy.cs</DependentUpon>
