--- a/QuanLyCuaHang/packages.config
+++ b/QuanLyCuaHang/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="3.2.0" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.2.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net472" />
   <package id="itext" version="9.0.0" targetFramework="net472" />
   <package id="itext.commons" version="9.0.0" targetFramework="net472" />
@@ -26,5 +28,8 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="Xceed.Document.NET" version="3.0.24152.1219" targetFramework="net472" />
+  <package id="Xceed.Pdf" version="3.0.24152.1219" targetFramework="net472" />
+  <package id="Xceed.Words.NET" version="3.0.24152.1219" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.8.0" targetFramework="net472" />
 </packages>
