--- a/QuanLyCuaHang/packages.config
+++ b/QuanLyCuaHang/packages.config
@@ -3,6 +3,10 @@
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="3.2.0" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.2.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.68.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.68.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.68.0" targetFramework="net472" />
+  <package id="Google.Apis.Sheets.v4" version="1.68.0.3624" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net472" />
   <package id="itext" version="9.0.0" targetFramework="net472" />
   <package id="itext.commons" version="9.0.0" targetFramework="net472" />
@@ -18,11 +22,13 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="MySql.Data" version="9.1.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.CodeDom" version="7.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
+  <package id="System.Management" version="7.0.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
